# Python-production-boilerplate

./: .dockerignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py  tracing_config.py
fastapi-boilerplate/: .env.test  .gitignore  Dockerfile  README.md
fastapi-boilerplate/app/: main.py
fastapi-boilerplate/app/api/: __init__.py  routes.py
fastapi-boilerplate/app/core/: __init__.py  config.py  logging_config.py
fastapi-boilerplate/app/functions/: __init__.py  data_validation.py
fastapi-boilerplate/app/schemas/: __init__.py  health.py  user.py
fastapi-boilerplate/app/services/: __init__.py  health_service.py  user_service.py
fastapi-boilerplate/app/utils/: __init__.py  formatters.py
lambda_boilerplate/: .dockerignore  .env.test  Dockerfile  README.md  pyproject.toml  template.yaml  test_event.json
lambda_boilerplate/src/: __init__.py  app.py
lambda_boilerplate/src/core/: __init__.py  config.py  logging_config.py  tracing_config.py
lambda_boilerplate/src/functions/: __init__.py  event_parser.py
lambda_boilerplate/src/schemas/: __init__.py  hello_schema.py
lambda_boilerplate/src/services/: __init__.py  hello_service.py
lambda_boilerplate/src/utils/: __init__.py  response_builder.py
lambda_boilerplate/tests/: test_handler.py
